--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "moment-timezone": "^0.5.39",
     "socket.io": "^4.5.4"
   },
+  "scripts": {
+    "start": "node app.js"
+  },
   "devDependencies": {
     "nodemon": "^2.0.20"
   }
